# forge

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: activity.rs  agent_chat.rs  agent_context.rs  agent_memory.rs  agent_profiles.rs  checkpoints.rs  coordinator.rs  deep_links.rs  environment.rs  git_review.rs  local_llms.rs  mod.rs  orchestrator.rs  pr_draft.rs  prompt_templates.rs  repositories.rs  review_cockpit.rs  settings.rs  terminal.rs  workspace_cleanup.rs  workspace_file_tree.rs  workspace_health.rs  workspace_ports.rs  workspace_scripts.rs  workspace_tasks.rs  workspace_templates.rs  workspaces.rs
src-tauri/src/context/: cache.rs  discovery.rs  graph.rs  ignore.rs  mod.rs  overlay.rs  preview.rs  rank.rs  schema.rs  select.rs  summary.rs  token_fit.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/models/: agent_chat.rs  agent_context.rs  agent_memory.rs  agent_profile.rs  agent_run.rs  checkpoint.rs  coordinator.rs  environment.rs  hook_inspector.rs  local_llm.rs  merge_readiness.rs  mod.rs  orchestrator.rs  pr_draft.rs  review_cockpit.rs  review_summary.rs  scheduler.rs  settings.rs  task_lifecycle.rs  terminal.rs  workspace.rs  workspace_attention.rs  workspace_conflict.rs  (+6 more)
(+318 files in other folders)
