[package]
name = "forge"
version = "0.1.0"
description = "Forge desktop shell"
authors = ["Forge"]
edition = "2021"

[lib]
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
